--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -38,6 +38,11 @@ screen.LIGHTING=Lighting
 
     option.ATMOSPHERIC_FOG_DENSITY=Atmospheric Fog Density
 
+    option.GI_FAST=Fake GI
+        option.GI_FAST.comment=Fakes global illumination (raytracing) by applying a blurred version of the view image as "lighting".
+        value.GI_FAST.true=Yes
+        value.GI_FAST.false=No
+
     screen.SSAO_BETA=Ambient Occlusion
     
     screen.SSAO=Ambient Occlusion §c(Experimental)§r
